// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxNavbarToggler customize 1`] = `
<div>
  <button
    class="navbar-toggler bazinga"
    type="button"
  >
    <span
      class="navbar-toggler-icon"
    />
  </button>
</div>
`;

exports[`CxNavbarToggler witch children 1`] = `
<div>
  <button
    class="navbar-toggler"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`CxNavbarToggler witch no children 1`] = `
<div>
  <button
    class="navbar-toggler"
    type="button"
  >
    <span
      class="navbar-toggler-icon"
    />
  </button>
</div>
`;
